# ransaclp4

./: README.md  pyproject.toml
ransaclp/: __init__.py  drawing.py  geometry.py  pointcloud.py  ransac.py  ransaccuda.py  ransaclp.py  ransaclpexperiments.py  sampling.py  stats.py
ransaclp/experiments/: example.py  example_cuda.py  example_industrial_cuda.py  experiment_all_files_Open3D_RANSAC_lines_fitting_plane.py  experiment_all_files_S3DIS_RANSAC_lines_fitting_plane.py  experiment_all_files_Tecnalia_RANSAC_lines_fitting_plane.py  experiment_one_file_Open3D_RANSAC_lines_fitting_plane.py  experiment_one_file_Open3D_RANSAC_lines_fitting_plane_CUDA.py  experiment_synthetic.py  experiment_synthetic_changing_parameters_big.py  experiment_synthetic_changing_parameters_small.py  experiment_synthetic_changing_percentage_outliers_big.py  experiment_synthetic_changing_percentage_outliers_small.py  experiment_unified_all_files_Open3D.py  experiment_unified_all_files_Open3D_precomputed.py  experiment_unified_all_files_S3DIS.py  experiment_unified_all_files_Tecnalia.py  friedman_and_shaffer_any_directory.py  get_boxplots_of_inliers_percentage.py  get_boxplots_of_means.py  get_boxplots_of_ranks.py  see_pcds_in_directory.py
ransaclp/results_experiments_ransaclp/: README.txt
ransaclp/results_experiments_ransaclp/Tecnalia/EvenTableSinglePartRealsense/: realsense_0.pkl  realsense_1.pkl  realsense_10.pkl  realsense_11.pkl  realsense_12.pkl  realsense_13.pkl  realsense_14.pkl  realsense_15.pkl  realsense_16.pkl  realsense_17.pkl  realsense_18.pkl  realsense_19.pkl  realsense_2.pkl  (+27 more)
(+120 files in other folders)
