[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ransaclp"
version = "0.0.1"
authors = [
  { name="José María Martínez Otzeta", email="jmartinezot@gmail.com" },
]
description = "RANSACLP"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "open3d>=0.16.0",
  "rsaitehu>=0.0.1",
  "rsaitehu-ransaccuda>=0.0.1",
]

[project.urls]
"Homepage" = "https://github.com/pypa/ransaclp"
"Bug Tracker" = "https://github.com/pypa/ransaclp/issues"

[tool.poetry.dependencies]
sphinx-automodapi = "*"

[project.optional-dependencies]
industrial_dataset = [
  "lanverso-industrial-dataset-helper @ git+https://github.com/jonazpiazu/lanverso-industrial-dataset-release.git",
]
